# raw_preview_rs

./: .gitignore  CHANGELOG.md  README.md
.github/: README.md
.github/workflows/: ci.yml
package/: Cargo.toml  build.rs  libjpeg_wrapper.cpp  libjpeg_wrapper.h  libjpeg_wrapper_new.cpp  libraw_wrapper.cpp  libraw_wrapper.h
package/src/: exif_data.rs  file_detector.rs  image_processor.rs  lib.rs  main.rs  raw_converter.rs  raw_processor.rs
