[package]
name = "raw_preview_rs"
version = "0.1.0"
authors = ["mlgldl <mail@mlgldl.dev>"]
description = "A Rust library for processing raw images to create fast previews and handling EXIF metadata."
license = "GPL-3.0"
repository = "https://github.com/mlgldl/raw_preview_rs"
readme = "README.md"
keywords = ["image-processing", "raw", "jpeg", "exif"]
categories = ["image-processing", "file-format"]
edition = "2024"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
reqwest = { version = "0.12.22", features = ["blocking"] }
flate2 = "1.1.2"
tar = "0.4"
